fix covers.css v-2

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -132,8 +132,4 @@
         width: 544px;
         height: 314px;
     }
-
-    .marquee__inner {
-        height: 360px;
-    }
 }
